# gchess

./: .gitignore  TODO.txt  meson.build
lib/: meson.build
lib/gchess/: board.vala  file.vala  game.vala  move.vala  pgn.vala  piece.vala  player.vala  rank.vala  square.vala
src/: main.vala  meson.build
src/chessgame_downloader/: main.vala  meson.build
test/: meson.build  test_board.vala  test_move.vala  test_pgn.vala
